MiniPascal/src/main/java/com/minipascalcompiler/minipascal/miniPascalParser.java
// Generated from java-escape by ANTLR 4.11.1

    package com.minipascalcompiler.minipascal;
    import com.minipascalcompiler.minipascal.tablaSimbolos;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class miniPascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, IF=4, THEN=5, ELSE=6, WHILE=7, DO=8, BEGIN=9, 
		END=10, REPEAT=11, UNTIL=12, FOR=13, TO=14, VAR=15, PROGRAM=16, ASSIGN=17, 
		BOOL=18, OPREL=19, AND=20, OR=21, READ=22, WRITE=23, MULS=24, SUMS=25, 
		ID=26, NUM=27, CHAR=28, CONSTSTR=29, MULTICOMMENT=30, SINGLECOMMENT=31, 
		SPACE=32, SEMICOLON=33, COLON=34, COMMA=35, DOT=36, LPAREN=37, RPAREN=38;
	public static final int
		RULE_type = 0, RULE_assign = 1, RULE_prog = 2, RULE_header = 3, RULE_sentence = 4, 
		RULE_sentence_t = 5, RULE_sentenceUnica = 6, RULE_read = 7, RULE_write = 8, 
		RULE_op = 9, RULE_op_t = 10, RULE_op_f = 11, RULE_exp = 12, RULE_exp_t = 13, 
		RULE_exp_f = 14, RULE_bwhile = 15, RULE_bif = 16, RULE_bbif = 17, RULE_belse = 18, 
		RULE_repeat = 19, RULE_bfor = 20, RULE_var = 21, RULE_vars = 22, RULE_bid = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"type", "assign", "prog", "header", "sentence", "sentence_t", "sentenceUnica", 
			"read", "write", "op", "op_t", "op_f", "exp", "exp_t", "exp_f", "bwhile", 
			"bif", "bbif", "belse", "repeat", "bfor", "var", "vars", "bid"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'integer'", "'char'", "'boolean'", "'if'", "'then'", "'else'", 
			"'while'", "'do'", "'begin'", "'end'", "'repeat'", "'until'", "'for'", 
			"'to'", "'var'", "'program'", "':='", null, null, "'and'", "'or'", "'read'", 
			"'write'", null, null, null, null, null, null, null, null, null, "';'", 
			"':'", "','", "'.'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "IF", "THEN", "ELSE", "WHILE", "DO", "BEGIN", 
			"END", "REPEAT", "UNTIL", "FOR", "TO", "VAR", "PROGRAM", "ASSIGN", "BOOL", 
			"OPREL", "AND", "OR", "READ", "WRITE", "MULS", "SUMS", "ID", "NUM", "CHAR", 
			"CONSTSTR", "MULTICOMMENT", "SINGLECOMMENT", "SPACE", "SEMICOLON", "COLON", 
			"COMMA", "DOT", "LPAREN", "RPAREN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public miniPascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IntegertypeContext extends TypeContext {
		public IntegertypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterIntegertype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitIntegertype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitIntegertype(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BooleantypeContext extends TypeContext {
		public BooleantypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterBooleantype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitBooleantype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitBooleantype(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ChartypeContext extends TypeContext {
		public ChartypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterChartype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitChartype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitChartype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type);
		try {
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				_localctx = new IntegertypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				match(T__0);
				}
				break;
			case T__1:
				_localctx = new ChartypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				match(T__1);
				}
				break;
			case T__2:
				_localctx = new BooleantypeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(miniPascalParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(miniPascalParser.ASSIGN, 0); }
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(ID);
			setState(54);
			match(ASSIGN);
			setState(55);
			op(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public TerminalNode EOF() { return getToken(miniPascalParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			header();
			setState(58);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(miniPascalParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(miniPascalParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(miniPascalParser.SEMICOLON, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(miniPascalParser.BEGIN, 0); }
		public SentenceContext sentence() {
			return getRuleContext(SentenceContext.class,0);
		}
		public TerminalNode END() { return getToken(miniPascalParser.END, 0); }
		public TerminalNode DOT() { return getToken(miniPascalParser.DOT, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(PROGRAM);
			setState(61);
			match(ID);
			setState(62);
			match(SEMICOLON);
			setState(63);
			var();
			setState(64);
			match(BEGIN);
			setState(65);
			sentence();
			setState(66);
			match(END);
			setState(67);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenceContext extends ParserRuleContext {
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
	 
		public SentenceContext() { }
		public void copyFrom(SentenceContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Sentence_primeroContext extends SentenceContext {
		public List<Sentence_tContext> sentence_t() {
			return getRuleContexts(Sentence_tContext.class);
		}
		public Sentence_tContext sentence_t(int i) {
			return getRuleContext(Sentence_tContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(miniPascalParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(miniPascalParser.SEMICOLON, i);
		}
		public Sentence_primeroContext(SentenceContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterSentence_primero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitSentence_primero(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitSentence_primero(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentencesincomaContext extends SentenceContext {
		public Sentence_tContext sentence_t() {
			return getRuleContext(Sentence_tContext.class,0);
		}
		public SentencesincomaContext(SentenceContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterSentencesincoma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitSentencesincoma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitSentencesincoma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sentence);
		int _la;
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new Sentence_primeroContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 79702160L) != 0) {
					{
					{
					setState(69);
					sentence_t();
					setState(70);
					match(SEMICOLON);
					}
					}
					setState(76);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				_localctx = new SentencesincomaContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				sentence_t();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sentence_tContext extends ParserRuleContext {
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public BifContext bif() {
			return getRuleContext(BifContext.class,0);
		}
		public BwhileContext bwhile() {
			return getRuleContext(BwhileContext.class,0);
		}
		public BforContext bfor() {
			return getRuleContext(BforContext.class,0);
		}
		public RepeatContext repeat() {
			return getRuleContext(RepeatContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public Sentence_tContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence_t; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterSentence_t(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitSentence_t(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitSentence_t(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sentence_tContext sentence_t() throws RecognitionException {
		Sentence_tContext _localctx = new Sentence_tContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sentence_t);
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case READ:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				read();
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				write();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				bif();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				bwhile();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 5);
				{
				setState(84);
				bfor();
				}
				break;
			case REPEAT:
				enterOuterAlt(_localctx, 6);
				{
				setState(85);
				repeat();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 7);
				{
				setState(86);
				assign();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenceUnicaContext extends ParserRuleContext {
		public Sentence_tContext sentence_t() {
			return getRuleContext(Sentence_tContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(miniPascalParser.SEMICOLON, 0); }
		public SentenceUnicaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentenceUnica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterSentenceUnica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitSentenceUnica(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitSentenceUnica(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceUnicaContext sentenceUnica() throws RecognitionException {
		SentenceUnicaContext _localctx = new SentenceUnicaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sentenceUnica);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				sentence_t();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				sentence_t();
				setState(91);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReadContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(miniPascalParser.READ, 0); }
		public TerminalNode LPAREN() { return getToken(miniPascalParser.LPAREN, 0); }
		public TerminalNode ID() { return getToken(miniPascalParser.ID, 0); }
		public TerminalNode RPAREN() { return getToken(miniPascalParser.RPAREN, 0); }
		public ReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterRead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitRead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitRead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadContext read() throws RecognitionException {
		ReadContext _localctx = new ReadContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_read);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(READ);
			setState(96);
			match(LPAREN);
			setState(97);
			match(ID);
			setState(98);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WriteContext extends ParserRuleContext {
		public TerminalNode WRITE() { return getToken(miniPascalParser.WRITE, 0); }
		public TerminalNode LPAREN() { return getToken(miniPascalParser.LPAREN, 0); }
		public TerminalNode CONSTSTR() { return getToken(miniPascalParser.CONSTSTR, 0); }
		public TerminalNode COMMA() { return getToken(miniPascalParser.COMMA, 0); }
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(miniPascalParser.RPAREN, 0); }
		public WriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_write; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterWrite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitWrite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitWrite(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WriteContext write() throws RecognitionException {
		WriteContext _localctx = new WriteContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_write);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(WRITE);
				setState(101);
				match(LPAREN);
				setState(102);
				match(CONSTSTR);
				setState(103);
				match(COMMA);
				setState(104);
				op(0);
				setState(105);
				match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				match(WRITE);
				setState(108);
				match(LPAREN);
				setState(109);
				match(CONSTSTR);
				setState(110);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OpContext extends ParserRuleContext {
		public Op_tContext op_t() {
			return getRuleContext(Op_tContext.class,0);
		}
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public TerminalNode SUMS() { return getToken(miniPascalParser.SUMS, 0); }
		public OpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OpContext op() throws RecognitionException {
		return op(0);
	}

	private OpContext op(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		OpContext _localctx = new OpContext(_ctx, _parentState);
		OpContext _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, 18, RULE_op, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(114);
			op_t(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(121);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new OpContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_op);
					setState(116);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(117);
					match(SUMS);
					setState(118);
					op_t(0);
					}
					} 
				}
				setState(123);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Op_tContext extends ParserRuleContext {
		public Op_fContext op_f() {
			return getRuleContext(Op_fContext.class,0);
		}
		public Op_tContext op_t() {
			return getRuleContext(Op_tContext.class,0);
		}
		public TerminalNode MULS() { return getToken(miniPascalParser.MULS, 0); }
		public Op_tContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_t; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).enterOp_t(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniPascalListener ) ((miniPascalListener)listener).exitOp_t(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniPascalVisitor ) return ((miniPascalVisitor<? extends T>)visitor).visitOp_t(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Op_tContext op_t() throws RecognitionException {
		return op_t(0);
	}

	private Op_tContext op_t(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Op_tContext _localctx = new Op_tContext(_ctx, _parentState);
		Op_tContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_op_t, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
